--- a/configuration.json
+++ b/configuration.json
@@ -1,6 +1,7 @@
 {
-  "camera_type": "v1",
-  "engineType": "EngineX"
+  "cameraType": "v1",
+  "engineType": "EngineX",
+  "lidarType": "LidarXT"
 
 
 
